--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@lottiefiles/dotlottie-react": "^0.14.4",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
+    "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.526.0",
     "react": "^19.1.0",
